更换调试端口，增加模块支持